[gd_scene load_steps=5 format=3 uid="uid://0rgkw6vek1p5"]

[ext_resource type="Theme" uid="uid://dqq77rxoecpnf" path="res://assets/theme.tres" id="1_41852"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="2_no0ny"]
[ext_resource type="FontFile" uid="uid://ddhkcn6evvmag" path="res://assets/just_sans_bold.otf" id="2_vhvrv"]

[sub_resource type="LabelSettings" id="LabelSettings_4i66o"]
font = ExtResource("2_vhvrv")
font_size = 96
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_41852")
script = ExtResource("2_no0ny")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -262.5
offset_top = 93.0
offset_right = 262.5
offset_bottom = 214.0
grow_horizontal = 2
text = "Game Title"
label_settings = SubResource("LabelSettings_4i66o")

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -25.0
offset_right = 43.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="LevelSelect" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 640.0
offset_bottom = 640.0

[node name="1" type="Button" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -33.0
offset_right = -255.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="2" type="Button" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -33.0
offset_right = -197.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "2"

[node name="3" type="Button" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -33.0
offset_right = -138.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "3
"

[node name="4" type="Button" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -33.0
offset_right = -80.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "4"

[node name="5" type="Button" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -33.0
offset_right = -22.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "5"

[node name="6" type="Button" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -33.0
offset_right = 36.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "6"

[node name="7" type="Button" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 52.0
offset_top = -33.0
offset_right = 94.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "7"

[node name="8" type="Button" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 110.0
offset_top = -33.0
offset_right = 152.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "8
"

[node name="9" type="Button" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 168.0
offset_top = -33.0
offset_right = 210.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "9"

[node name="10" type="Button" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 226.0
offset_top = -33.0
offset_right = 289.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "10"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="LevelSelect/1" to="." method="_level_selected" binds= ["level_one"]]
[connection signal="pressed" from="LevelSelect/2" to="." method="_level_selected" binds= ["level_two"]]
[connection signal="pressed" from="LevelSelect/3" to="." method="_level_selected" binds= ["level_three"]]
[connection signal="pressed" from="LevelSelect/4" to="." method="_level_selected" binds= ["level_four"]]
[connection signal="pressed" from="LevelSelect/5" to="." method="_level_selected" binds= ["level_five"]]
[connection signal="pressed" from="LevelSelect/6" to="." method="_level_selected" binds= ["level_six"]]
[connection signal="pressed" from="LevelSelect/7" to="." method="_level_selected" binds= ["level_seven"]]
[connection signal="pressed" from="LevelSelect/8" to="." method="_level_selected" binds= ["level_eight"]]
[connection signal="pressed" from="LevelSelect/9" to="." method="_level_selected" binds= ["level_nine"]]
[connection signal="pressed" from="LevelSelect/10" to="." method="_level_selected" binds= ["level_ten"]]
